2009-10-28  Dave Cross <dave@dave.org.uk>

  * lib/Perlanet.pm: Version 0.34.

2009-10-15  Dave Cross <dave@dave.org.uk>

  * MANIFEST: Added t/data/davblog.xml to MANIFEST so the tests work as
  expected.

2009-10-14  Dave Cross <dave@dave.org.uk>

  * lib/Perlanet.pm: Oops. One too many entries.

  * lib/Perlanet.pm: Sort individual feed entries before selecting ones to use.
  Fix really stupid date sort bug. Version 0.35.

2009-10-14  Dave Cross <dave@dave-desktop.gumtree.com>

  * bin/perlanet, lib/Perlanet.pm: Fix former change. And document it.

  * lib/Perlanet.pm: Support an 'entries_per_feed' config option.

2009-10-12  Dave Cross <dave@dave-desktop.gumtree.com>

  * Build.PL, lib/Perlanet.pm, t/01_basic.t, t/04_moose_constr.t: Make
  XML::OPML::SimpleGen optional.

  * lib/Perlanet.pm: Version 0.34.

  * lib/Perlanet.pm: Really make CHI optional.

2009-10-11  Dave Cross <dave@dave.org.uk>

  * lib/Perlanet.pm: Bumped to version 0.33.

  * lib/Perlanet.pm: Fixed stupid error where feeds weren't getting processed
  if they returned a 304 status.

  * lib/Perlanet.pm, t/perlanetrc, t/testrc: Couple of typos fixed. More test
  fixes.

  * t/01_basic.t, t/02_basic.t, t/03_noconf.t, t/04_moose_constr.t,
  t/data/davblog.xml, t/perlanetrc, t/testrc: Work to improve test coverage.

2009-10-10  Dave Cross <dave@dave.org.uk>

  * lib/Perlanet.pm: Bump version to 0.32

  * lib/Perlanet.pm: Work around bug in POSIX::setlocale.

  * lib/Perlanet.pm: Force config file to be opened as utf8

  * bin/perlanet: Perltidied.

  * lib/Perlanet.pm: Fixed typo

  * Build.PL: Added Moose as a requirement.

  * lib/Perlanet.pm: Improved error handling (used Carp).

2009-10-07  Dave Cross <dave@dave-desktop.gumtree.com>

  * Build.PL: Added CHI to recommended modules. Moved Compress::ZLib to
  recommended modules.

  * lib/Perlanet.pm: Sort by modified, then issued dates.

2009-10-05  Dave Cross <dave@dave.org.uk>

  * lib/Perlanet.pm: Add newline to the end of 'warn' call.
