@@ -1,6 +1,6 @@
 ---
 name: Perlanet
-version: 0.36
+version: 0.37
 author:
   - 'Dave Cross <dave@mag-sol.com>'
 abstract: |-
@@ -10,7 +10,7 @@ license: perl
 resources:
   MailingList: http://lists.mag-sol.com/mailman/listinfo/perlanet
   homepage: http://code.mag-sol.com/Perlanet/
-  license: http://dev.perl.org/licenses/
+  license: ~
   repository: git://github.com/davorg/perlanet.git
 requires:
   DateTime: 0
@@ -34,7 +34,7 @@ recommends:
 provides:
   Perlanet:
     file: lib/Perlanet.pm
-    version: 0.36
+    version: 0.37
 generated_by: Module::Build version 0.32
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
